--- a/library_app/static/css/style.less
+++ b/library_app/static/css/style.less
@@ -60,6 +60,16 @@ div.login {
 
 .log_form {
   margin: 0px;
+  text-align: center;
+}
+
+.btn-text {
+  color: white;
+}
+
+.btn-facebook {
+  max-width: 240px;
+  margin: auto;
 }
 
 div.panel {
@@ -87,6 +97,7 @@ div.panel {
     &.main p {
       text-indent: 30px;
     }
+
 
 
     div.page-title-outer{
@@ -124,6 +135,57 @@ table.books_table {
 
 table.friends_table {
     width: 100%;
+}
+//quote-from-friend
+//div.hidden {
+//  visibility: hidden;
+//}
+
+//div.options-list {
+//  float: left;
+//}
+
+div.quote-from-friend {
+
+  & div.gravator {
+    margin-top:10px;
+  }
+}
+
+div.quotation {
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 10px;
+  text-align: justify;
+}
+
+div.quote-from-friend {
+  width : 250px;
+  margin: auto;
+  background-color: white;
+  border-style: dashed;
+  border-color: black;
+  border-width: 2px;
+  border-radius: 15px;
+//  position: absolute;
+//  right: 20px;
+  float: right;
+
+  & div.quotation-owner {
+    text-align: center;
+  }
+
+  & div.quotation {
+    text-indent: 10px;
+    font-style: italic;
+  }
+
+  & div.gravator {
+    width:  80px;
+    & img {
+      width: 80px;
+    }
+  }
 }
 
 /* Extra markup and styles for table-esque vertical and horizontal centering */
@@ -244,4 +306,176 @@ span.quotation {
 
 span.deadline {
   color : red;
+}
+
+
+//CAROUSEL FROM BOOTSTRAP
+
+/* GLOBAL STYLES
+-------------------------------------------------- */
+/* Padding below the footer and lighter body text */
+
+body {
+  padding-bottom: 40px;
+  color: #5a5a5a;
+}
+
+
+
+/* CUSTOMIZE THE CAROUSEL
+-------------------------------------------------- */
+
+/* Carousel base class */
+.carousel {
+  height: 500px;
+  margin-bottom: 60px;
+  margin-top: -20px;
+}
+/* Since positioning the image, we need to help out the caption */
+.carousel-caption {
+  z-index: 10;
+  padding-left: 60px;
+  padding-right: 60px;
+}
+
+/* Declare heights because of positioning of img element */
+.carousel .item {
+  height: 500px;
+  background-color: #777;
+}
+.carousel-inner > .item > img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-width: 100%;
+  height: 500px;
+}
+
+
+/* MARKETING CONTENT
+-------------------------------------------------- */
+
+
+.marketing {
+  text-align: center;
+
+  & .col-lg-4 {
+  margin-bottom: 20px;
+  text-align: center;
+  width: 250px;
+  display: inline-block;
+    & img.left {
+      float: left;
+    }
+  }
+
+  & .row{
+  text-align: center;
+}
+}
+
+
+/* Center align the text within the three columns below the carousel */
+
+
+.marketing h2 {
+  font-weight: normal;
+}
+.marketing .col-lg-4 p {
+  margin-right: 10px;
+  margin-left: 10px;
+}
+
+
+/* Featurettes
+------------------------- */
+
+.featurette-divider {
+  margin: 80px 0; /* Space out the Bootstrap <hr> more */
+}
+
+/* Thin out the marketing headings */
+.featurette-heading {
+  font-weight: 300;
+  line-height: 1;
+  letter-spacing: -1px;
+}
+
+
+/* RESPONSIVE CSS
+-------------------------------------------------- */
+
+@media (min-width: 768px) {
+  /* Navbar positioning foo */
+//  .navbar-wrapper {
+//    margin-top: 20px;
+//  }
+//  .navbar-wrapper .container {
+//    padding-right: 15px;
+//    padding-left: 15px;
+//  }
+//  .navbar-wrapper .navbar {
+//    padding-right: 0;
+//    padding-left: 0;
+//  }
+
+  /* The navbar becomes detached from the top, so we round the corners */
+//  .navbar-wrapper .navbar {
+//    border-radius: 4px;
+//  }
+
+  /* Bump up size of carousel content */
+  .carousel-caption p {
+    margin-bottom: 20px;
+    font-size: 21px;
+    line-height: 1.4;
+  }
+
+  .featurette-heading {
+    font-size: 50px;
+  }
+}
+
+@media (min-width: 992px) {
+  .featurette-heading {
+    margin-top: 120px;
+  }
+}
+
+//div.white-background {
+//  background-color: white;
+//}
+
+span.sr-only {
+//  font-size: small;
+  visibility: hidden;
+}
+
+div.col-md-5 {
+  display: inline-block;
+  width: 300px;
+  height: 300px;
+
+  & img {
+    vertical-align: bottom;
+  }
+}
+
+
+div.col-md-7 {
+  display: inline-block;
+  width: 500px
+}
+
+
+div.fb_mess {
+  font-size: 1.3em;
+}
+
+div.center {
+  text-align: center;
+}
+
+span.red {
+  color: red;
 }
