--- a/library_app/static/css/public_home.less
+++ b/library_app/static/css/public_home.less
@@ -2,3 +2,13 @@ body {
   background: white none;
 }
 
+.person-desc {
+  text-align: justify;
+  text-indent: 20px;
+}
+
+.lead {
+	text-align: justify;
+  	text-indent: 40px;
+  	padding: 30px;
+}
