Public page design

--- a/library_app/static/css/public_home.less
+++ b/library_app/static/css/public_home.less
@@ -12,3 +12,47 @@ body {
   	text-indent: 40px;
   	padding: 30px;
 }
+
+div.white-background, div.container, div.site-wrapper, div.content,
+div.site-wrapper-inner, div.cover-container {
+	width: 100%;
+}
+
+#first-feat {
+	width: 70%;
+	margin: 0 auto;
+	border-radius: 50px;
+	background: -webkit-linear-gradient(#9CBCD0, #9CBCDD); /* For Safari 5.1 to 6.0 */
+  	background: -o-linear-gradient(#9CBCD0, #9CBCDD); /* For Opera 11.1 to 12.0 */
+  	background: -moz-linear-gradient(#9CBCD0, #9CBCDD); /* For Firefox 3.6 to 15 */
+  	background: linear-gradient(#9CBCD0, #9CBCDD); /* Standard syntax */
+}
+
+#third-feat {
+	width: 100%;
+	background: -webkit-linear-gradient(#727272, #747592); /* For Safari 5.1 to 6.0 */
+  	background: -o-linear-gradient(#727272, #747592); /* For Opera 11.1 to 12.0 */
+  	background: -moz-linear-gradient(#727272, #747592); /* For Firefox 3.6 to 15 */
+  	background: linear-gradient(#727272, #747592); /* Standard syntax */
+}
+
+#third-feat  {
+	.featurette-heading, .lead {
+		color: white;
+	}
+}
+
+
+
+h1#team {
+	padding-top: 0px;
+	margin-top: 0px;
+}
+
+#content {
+	width: 100%;
+}
+
+.container .marketing {
+	width: 100%;
+}
