--- a/library_app/static/css/style.less
+++ b/library_app/static/css/style.less
@@ -27,6 +27,10 @@ body {
   padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
 }
 
+div.cover-container {
+  width: 100%
+}
+
 div.logo {
   display: table-cell;
   margin-left: 0px;
@@ -411,10 +415,5 @@ div.center {
 }
 
 span.red {
-  color: red;
-}
-
-#team p {
-  text-align: justify;
   color: red;
 }
