Flower added; css adjustment

--- a/library_app/static/css/public_home.less
+++ b/library_app/static/css/public_home.less
@@ -18,6 +18,29 @@ div.site-wrapper-inner, div.cover-container {
 	width: 100%;
 }
 
+div.flower {
+	background-image: url(../img/flower.png);
+	background-size: 70px 150px;
+	width: 140px;
+	height: 300px;
+	position: absolute;
+	// top: 0px;
+	// left: 0px;
+	margin-left: 20px;
+	margin-top: 20px;
+	z-index: 200;
+	background-repeat: no-repeat;
+
+	@media screen and (max-width: 1240px){
+		display: none;
+	}
+}
+
+.img-responsive {
+	margin-bottom: 30px;
+	margin-top: 30px;
+}
+
 #first-feat {
 	width: 70%;
 	margin: 0 auto;
