public home adjustment

--- a/library_app/static/css/public_home.less
+++ b/library_app/static/css/public_home.less
@@ -41,6 +41,10 @@ div.flower {
 	margin-top: 30px;
 }
 
+.navbar {
+	background-color: #1a1a1a;
+}
+
 #first-feat {
 	width: 70%;
 	margin: 0 auto;
@@ -68,7 +72,7 @@ div.flower {
 
 
 h1#team {
-	padding-top: 0px;
+	padding-top: 25px;
 	margin-top: 0px;
 }
 
