--- a/library_app/static/css/style.less
+++ b/library_app/static/css/style.less
@@ -7,7 +7,17 @@ div.footer-container-outer {
     display: table;
     position:  absolute;
     height:  100%;
-    width:  100%;
+    width:  90%;
+}
+
+.navbar-inner {
+  // width: 90%;
+  margin: 0 auto;
+}
+
+.footer-container-outer {
+  border-top-right-radius: 20px;
+  border-top-left-radius: 20px;
 }
 
 div.footer-container {
@@ -309,8 +319,13 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  min-width: 100%;
+  width: 100%;
   height: 500px;
+}
+
+#myCarousel {
+  width: 90%;
+  margin: 0 auto;
 }
 
 /* MARKETING CONTENT
